Добавил работу слайдера через js

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 <div class="slider">
     <div class="slides">
         <div class="slide"><img src="imgs/цветок1.webp" alt="Slide1">
-        <p>Табак крылатый</p></div>
-        <div class="slide"><img src="imgs/Цветок2.jpg" alt="Slide2">
-        <p>Цветок такой</p></div>
-        <div class="slide"><img src="imgs/цветок4.jpg" alt="Slide3">
-        <p>Цветок такой</p></div>
+        <p>"Табак крылатый"</p></div>
+        <div class="slide"><img src="imgs/цветок4.jpg" alt="Slide2">
+        <p>"Гвоздика Китайская"</p></div>
+        <div class="slide"><img src="imgs/Цветок3.jpg" alt="Slide3">
+        <p>"Аквилегия Красная"</p></div>
     </div>
         <div class="btnslide">
-            <a class="previous" onclick="">&#10094;</a>
-            <a class="next" onclick="">&#10095;</a>
+            <a class="previous" onclick="slidePrev()">&#10094;</a>
+            <a class="next" onclick="slideNext()">&#10095;</a>
         </div>
 </div>
 
@@ -70,7 +70,7 @@
         </div>
         <div class="product-card">
             <img src="imgs/Цветок3.jpg" alt="цветок">
-            <h3>"Аквилегия красная звезда"</h3>
+            <h3>"Аквилегия красная"</h3>
             <p>Вид: Цветок</p>
             <p>Цена: 1300p</p>
             <a href="product.html" class="product-link">Перейти к товару</a>
@@ -92,5 +92,6 @@
             <p><strong>График работы:</strong> Пн-Пт: 9:00–18:00, Сб-Вс: 10:00–16:00</p>
         </div>
     </footer>
+<script src="script.js"></script>
 </body>
 </html>
