Реализация поиска и сортировки в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,6 @@
 
     <div class="search">
         <input type="text" placeholder="Поиск товаров...">
-        <button>Найти</button>
     </div>
 
     <div class="filters">
@@ -48,29 +47,11 @@
     <hr style="width: 90%; margin: 0 auto; margin-bottom: 15px;">
 
     <div class="products">
-        <div class="product-card">
-            <img src="imgs/цветок4.jpg" alt="цветок">
-            <h3>"Табак крылатый"</h3>
-            <p>Вид: Цветы</p>
-            <p>Цена: 960p</p>
-            <a href="product.html" class="product-link">Перейти к товару</a>
-        </div>
-        <div class="product-card">
-            <img src="imgs/Цветок3.jpg" alt="цветок">
-            <h3>"Аквилегия красная звезда"</h3>
-            <p>Вид: Цветы</p>
-            <p>Цена: 1300p</p>
-            <a href="product.html" class="product-link">Перейти к товару</a>
-        </div>
-        <div class="product-card">
-            <img src="imgs/Цветок2.jpg" alt="цветок">
-            <h3>"Гацания"</h3>
-            <p>Вид: Цветы</p>
-            <p>Цена: 1200p</p>
-            <a href="product.html" class="product-link">Перейти к товару</a>
-        </div>
     </div>
-
+    <div class="pagination">
+  <button class="page-btn" data-page="1">1</button>
+  <button class="page-btn" data-page="2">2</button>
+    </div>
     <footer>
         <div class="contact-info">
             <p><strong>Адрес:</strong> г. Владимир, ул. Садовая, 123</p>
@@ -79,5 +60,6 @@
             <p><strong>График работы:</strong> Пн-Пт: 9:00–18:00, Сб-Вс: 10:00–16:00</p>
         </div>
     </footer>
+<script src="catalog.js"></script>
 </body>
 </html>
